Bug 389623 - potd "Centered" positioning behaves exactly as "Tiled" somewhy
Summary: potd "Centered" positioning behaves exactly as "Tiled" somewhy
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kdeclarative
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.94.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-30 00:39 UTC by Nikita Skovoroda
Modified: 2022-06-14 17:51 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.96
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nikita Skovoroda 2018-01-30 00:39:11 UTC
1. Switch Plasma Wallpaper plugin to org.kde.potd
2. Select «Positioning» : «Centered».

Observed behavior: picture is tiled starting with top-left corner, exactly as in  «Positioning» : «Tiled».

Expected behaviour: centered image on colored (e.g. black) background, like with org.kde.image wallpaper backend.
Comment 1 Nikita Skovoroda 2018-01-30 00:40:13 UTC
Qt version is 5.10.0.
Comment 2 Duncan 2022-06-09 04:04:29 UTC
This is a long-standing bug I still see.  Confirming and CCing.  (And also mentioning in a new PotD bug 455062.  They're working on PotD ATM thus creating that bug; maybe they can finally fix this one too.)

Actually, what I'd consider *ideal*, tho it'd require additional UI, would be adjustable zoom/pan so the portion of the image shown could be selected, be that top-left, centered at 100%, bottom-right, or other.  And of course make it so such a choice can be applied to either PotD or local images.

Alternatively, remove the "centered" option for PotD since it's just broken, and has been for years.
Comment 3 Duncan 2022-06-09 04:14:04 UTC
CCing Fushan Wen as he seems to have been doing all the recent PotD work.  Maybe he can fix this one while he's at it. =:^)
Comment 4 Bug Janitor Service 2022-06-09 05:08:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kdeclarative/-/merge_requests/128
Comment 5 Fushan Wen 2022-06-14 17:51:58 UTC
Git commit 41b3d0b142387c3acbba73f6ac332b3f314f7700 by Fushan Wen.
Committed on 14/06/2022 at 15:58.
Pushed by fusionfuture into branch 'master'.

qmlcontrols: add `Pad` fill mode in `QImageItem`

This matches the behavior in `QQuickImage`.
FIXED-IN: 5.96

M  +6    -1    src/qmlcontrols/kquickcontrolsaddons/qimageitem.cpp
M  +1    -0    src/qmlcontrols/kquickcontrolsaddons/qimageitem.h

https://invent.kde.org/frameworks/kdeclarative/commit/41b3d0b142387c3acbba73f6ac332b3f314f7700