qmlcontrols: add `Pad` fill mode in `QImageItem`

This matches the behavior in `QQuickImage`.

BUG: 389623
FIXED-IN: 5.96